--- a/Kontrahent/kontrahentshow.ui
+++ b/Kontrahent/kontrahentshow.ui
@@ -33,19 +33,6 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>80</y>
-      <width>131</width>
-      <height>13</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Nazwisko</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
@@ -162,19 +149,6 @@
      <string>Numer porządkowy</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>36</y>
-      <width>131</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Nazwa</string>
-    </property>
-   </widget>
    <widget class="QLineEdit" name="leKraj">
     <property name="enabled">
      <bool>false</bool>
@@ -270,19 +244,6 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_4">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>100</y>
-      <width>131</width>
-      <height>13</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Kraj</string>
-    </property>
-   </widget>
    <widget class="QComboBox" name="comboBoxPomoc">
     <property name="geometry">
      <rect>
@@ -317,19 +278,6 @@
     </property>
     <property name="text">
      <string>TextLabel</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>60</y>
-      <width>131</width>
-      <height>13</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Imię</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_14">
@@ -531,6 +479,58 @@
        <string>Województwo</string>
       </property>
      </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>30</y>
+        <width>101</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Imię</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_4">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>70</y>
+        <width>101</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Kraj</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>50</y>
+        <width>101</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Nazwisko</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>101</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Nazwa</string>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QPushButton" name="pushButton_3">
@@ -635,6 +635,30 @@
      <string>Zamknij</string>
     </property>
    </widget>
+   <zorder>leMiasto</zorder>
+   <zorder>pushButton_4</zorder>
+   <zorder>scrollArea_2</zorder>
+   <zorder>lblNumerPorz</zorder>
+   <zorder>leKraj</zorder>
+   <zorder>leUlica</zorder>
+   <zorder>leUrl</zorder>
+   <zorder>leTelPryw</zorder>
+   <zorder>leNazwa</zorder>
+   <zorder>comboBoxPomoc</zorder>
+   <zorder>pushButton</zorder>
+   <zorder>label_15</zorder>
+   <zorder>label_14</zorder>
+   <zorder>comboBoxPomoc1</zorder>
+   <zorder>leRegion</zorder>
+   <zorder>leImie</zorder>
+   <zorder>scrollArea</zorder>
+   <zorder>pushButton_3</zorder>
+   <zorder>leNazwisko</zorder>
+   <zorder>leEmail</zorder>
+   <zorder>leNrDomu</zorder>
+   <zorder>leTelefon</zorder>
+   <zorder>pushButton_2</zorder>
+   <zorder>leKod</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
