--- a/Kontrahent/kontrahentinfo.ui
+++ b/Kontrahent/kontrahentinfo.ui
@@ -889,6 +889,12 @@
       <height>192</height>
      </rect>
     </property>
+    <property name="alternatingRowColors">
+     <bool>true</bool>
+    </property>
+    <property name="sortingEnabled">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
