--- a/baza.ui
+++ b/baza.ui
@@ -286,6 +286,39 @@
      </rect>
     </property>
    </widget>
+   <widget class="QCheckBox" name="checkBox">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>80</y>
+      <width>70</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Sortuj</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox_5">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>80</y>
+      <width>160</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox_6">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>80</y>
+      <width>160</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
    <zorder>tableViewDB</zorder>
    <zorder>labelTest</zorder>
    <zorder>comboBox_4</zorder>
@@ -299,6 +332,9 @@
    <zorder>scrollArea</zorder>
    <zorder>comboBox</zorder>
    <zorder>labelDaty</zorder>
+   <zorder>checkBox</zorder>
+   <zorder>comboBox_5</zorder>
+   <zorder>comboBox_6</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
