--- a/Kontrahent/kontrahentinfo.ui
+++ b/Kontrahent/kontrahentinfo.ui
@@ -906,7 +906,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Zapisz</string>
+     <string>Odswież</string>
     </property>
    </widget>
    <widget class="QScrollArea" name="scrollArea_8">
@@ -1025,6 +1025,19 @@
      <string>Dodaj wpis</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_4">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>530</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
    <zorder>groupBox_2</zorder>
    <zorder>groupBox</zorder>
    <zorder>pushButton</zorder>
@@ -1033,6 +1046,7 @@
    <zorder>scrollArea_8</zorder>
    <zorder>pushButton_2</zorder>
    <zorder>labelDaty</zorder>
+   <zorder>pushButton_4</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
