--- a/Kontrahent/kontrahentinfododajwpis.ui
+++ b/Kontrahent/kontrahentinfododajwpis.ui
@@ -431,6 +431,19 @@ przypomnienia:</string>
      </rect>
     </property>
    </widget>
+   <widget class="QLabel" name="label_14">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>70</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>12:00</string>
+    </property>
+   </widget>
    <zorder>label_9</zorder>
    <zorder>label_13</zorder>
    <zorder>label</zorder>
@@ -453,6 +466,7 @@ przypomnienia:</string>
    <zorder>lineEdit</zorder>
    <zorder>textEdit_2</zorder>
    <zorder>labelDaty</zorder>
+   <zorder>label_14</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
