--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -428,29 +428,19 @@
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <widget class="QToolBar" name="toolBar">
-   <property name="windowTitle">
-    <string>toolBar</string>
+  <action name="actionBaza">
+   <property name="checkable">
+    <bool>true</bool>
    </property>
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-   <addaction name="separator"/>
-  </widget>
-  <widget class="QToolBar" name="toolBar_2">
-   <property name="windowTitle">
-    <string>toolBar_2</string>
+   <property name="icon">
+    <iconset>
+     <normalon>:/prefix1/DBIcon1.png</normalon>
+    </iconset>
    </property>
-   <attribute name="toolBarArea">
-    <enum>BottomToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-  </widget>
+   <property name="text">
+    <string>Baza</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
