--- a/Urzadzenia/urzadzeniaprzypominacz.ui
+++ b/Urzadzenia/urzadzeniaprzypominacz.ui
@@ -228,6 +228,19 @@
      <string>Najblizsze 10</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>786</x>
+      <y>490</y>
+      <width>151</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
