--- a/Urzadzenia/urzadzeniaprzypominacz.ui
+++ b/Urzadzenia/urzadzeniaprzypominacz.ui
@@ -240,14 +240,27 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>786</x>
-      <y>490</y>
+      <x>510</x>
+      <y>480</y>
       <width>151</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>860</x>
+      <y>530</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Szczegóły</string>
     </property>
    </widget>
   </widget>
