--- a/Urzadzenia/urzadzenia.ui
+++ b/Urzadzenia/urzadzenia.ui
@@ -93,6 +93,9 @@
     </property>
    </widget>
    <widget class="QListView" name="countriesList">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>510</x>
@@ -116,6 +119,9 @@
     </property>
    </widget>
    <widget class="QComboBox" name="comboBox_4">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>468</x>
@@ -312,6 +318,9 @@
     </property>
    </widget>
    <widget class="QLabel" name="LblNumberAnaliz">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>616</x>
@@ -400,6 +409,9 @@
     </property>
    </widget>
    <widget class="QListView" name="listViewUrzaNrSeryjny">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>510</x>
@@ -459,6 +471,9 @@
     </property>
    </widget>
    <widget class="QListView" name="listViewUrzaModel">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>510</x>
@@ -531,6 +546,19 @@
       <width>211</width>
       <height>20</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblCheckOkNo">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>170</y>
+      <width>50</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
     </property>
    </widget>
   </widget>
