--- a/Urzadzenia/urzadzenialista.ui
+++ b/Urzadzenia/urzadzenialista.ui
@@ -121,7 +121,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>440</y>
+      <y>460</y>
       <width>161</width>
       <height>16</height>
      </rect>
@@ -179,7 +179,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>60</y>
+      <y>80</y>
       <width>551</width>
       <height>371</height>
      </rect>
@@ -214,7 +214,7 @@
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>450</y>
+      <y>460</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -384,6 +384,19 @@
     </property>
     <property name="text">
      <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="chbLast10">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>50</y>
+      <width>121</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Ostatnie 10</string>
     </property>
    </widget>
   </widget>
